# omg

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  cfg.json  config.json  create_stats.cpp  limiting_test.cpp  main.cpp  omg_cmd.cpp
apps/reference/: CMakeLists.txt  mesh_setup.txt  triangle.c  triangle_refine_proj_bin.c
apps/reference/meshes/: medsea.poly
apps/reference/topo/: README.txt
apps/tests/: CMakeLists.txt  create_stats.cpp  limiting_test.cpp  medsea_test.cpp  region_test.cpp
scripts/: 2d2off.cpp  comparison_table.py  convert2off.py  limit_comp.py  plot_graphs.py
src/: CMakeLists.txt  omg.h  types.h  util.h
src/analysis/: aggregates.h  assertions.cpp  assertions.h  grid_compare.h  mesh_quality.cpp  mesh_quality.h  size_gradient.cpp  size_gradient.h
src/boundary/: boundary.cpp  boundary.h  boundary_generator.cpp  boundary_generator.h  marching_quads.cpp  marching_quads.h  remeshing.cpp  remeshing.h  simplification.cpp  simplification.h
src/geometry/: he_polygon.cpp  he_polygon.h  line_graph.cpp  line_graph.h  line_intersection.cpp  line_intersection.h  mesh.h  polygon.cpp  polygon.h  types.h
src/io/: bin32_reader.cpp  bin32_reader.h  csv_writer.h  nc_reader.cpp  nc_reader.h  nod2d_writer.cpp  nod2d_writer.h  off_writer.cpp  off_writer.h  poly_reader.cpp  poly_reader.h  vtk_writer.cpp  vtk_writer.h
src/mesh/: mesh.cpp  mesh.h  remeshing.cpp  remeshing.h
src/size_function/: constant_size.cpp  constant_size.h  gradient_limiting.cpp  gradient_limiting.h  jigsaw_size.cpp  jigsaw_size.h  reference_size.cpp  reference_size.h  size_function.cpp  size_function.h
src/topology/: scalar_field.h
src/triangulation/: acute_triangulator.cpp  acute_triangulator.h  jigsaw_triangulator.cpp  jigsaw_triangulator.h  triangle_helper.cpp  triangle_helper.h  triangle_triangulator.cpp  triangle_triangulator.h  triangulator.cpp  triangulator.h
